--- a/arangodb-client.cabal
+++ b/arangodb-client.cabal
@@ -22,8 +22,10 @@ library
     Database.ArangoDB
     Database.ArangoDB.Collection
     Database.ArangoDB.Database
+    Database.ArangoDB.Document
     Database.ArangoDB.Graph
     Database.ArangoDB.Index
+    Database.ArangoDB.Key
     Database.ArangoDB.Types
 
   other-modules:
@@ -41,4 +43,5 @@ library
     text                    >= 1.2  && < 1.3,
     text-show               >= 3.0  && < 4.0,
     unordered-containers    >= 0.2  && < 0.3,
+    uuid                    >= 1.3  && < 1.4,
     vector                  >= 0.11 && < 0.13
