--- a/arangodb-client.cabal
+++ b/arangodb-client.cabal
@@ -44,4 +44,5 @@ library
     text-show               >= 3.0  && < 4.0,
     unordered-containers    >= 0.2  && < 0.3,
     uuid                    >= 1.3  && < 1.4,
-    vector                  >= 0.11 && < 0.13
+    vector                  >= 0.11 && < 0.13,
+    zlib                    >= 0.6  && < 0.7
